# threat-inspector

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: asset-discovery.yml  vuln-report.yml
assets/: logo.txt
configs/: client.yaml
examples/: config.yaml
github/workflows/: asset-discovery.yml  nmap-scan.yml  ssl-grade.yml
src/threat_inspector/: __init__.py  cli.py  config.py  core.py
src/threat_inspector/api/: __init__.py  main.py
src/threat_inspector/models/: __init__.py
src/threat_inspector/parsers/: __init__.py  base.py  nessus.py  nmap.py  qualys.py  zap.py
src/threat_inspector/reports/: __init__.py  html.py
src/threat_inspector/utils/: __init__.py  compliance.py  remediation.py
tests/: __init__.py  test_parsers.py
